--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -110,7 +110,7 @@
 <!-- HERO VIDEO NUEVO -->
 <section class="hero-video">
   <video autoplay muted loop playsinline>
-    <source src="file:///C:/Users/Tarde/Downloads/grok-video-856812fc-d739-431d-807c-dff08156dfb3%20(1).mp4" type="video/mp4">
+    <source src="https://drive.google.com/uc?id=1vX7oEaIt6Rp3ryEgm594nbLgcPIjb4MI" type="video/mp4">
     Tu navegador no soporta video.
   </video>
   <div class="hero-overlay">
@@ -138,25 +138,25 @@
 <section>
   <h2>Nuestros platos</h2>
   <div class="grid">
-    <img src="file:///C:/Users/Tarde/Downloads/a6c79589-b756-4966-989e-0e546ba3e5d8.jpg" alt="Arroz 1">
+    <img src="https://drive.google.com/uc?id=1eqVmbUwnDZmOgAeACHnUGX8Pf5YNMBSQ" alt="Arroz 1">
     <p>Este plato es una deliciosa fusión de sabores que combina la cocina asiática con los ingredientes típicos de la gastronomía española. 
         En él, se pueden apreciar unas jugosas gambas salteadas, que aportan un toque de mar y una textura crujiente. 
         Estas gambas se han cocinado con una salsa de sabores intensos, probablemente a base de soja, jengibre y otros condimentos orientales. 
         El plato se completa con una selección de verduras frescas, como pimientos, cebolla y brotes de soja, que le dan un toque de frescura y crujencia. 
         El resultado es un plato colorido, lleno de contrastes de texturas y sabores, que transporta a los comensales a un viaje culinario por las costas de España y Asia.</p>
-    <img src="file:///C:/Users/Tarde/Downloads/38121ac7-8b74-40e9-8186-3135c9984032.jpg" alt="Arroz 2">
+    <img src="https://drive.google.com/uc?id=1z3uOTvlMo634MgCjrdw5X_XbqRW2yqaq" alt="Arroz 2">
     <p>Este plato presenta una deliciosa combinación de arroz, verduras y pollo. 
         El arroz, bien cocido y suelto, se ha integrado a la perfección con los vegetales frescos, como zanahorias, guisantes y pimientos, que aportan color, crujencia y frescura. 
         El pollo, tierno y sazonado, se ha incorporado de manera armoniosa, complementando los sabores y texturas del conjunto. 
         Este plato de arroz frito asiático ofrece un equilibrio nutricional y una experiencia gastronómica sencilla pero deliciosa, ideal para aquellos que buscan una comida saludable y satisfactoria.</p>
-    <img src="file:///C:/Users/Tarde/Downloads/319e5124-6c6a-4d16-b24c-3e2d23f68630.jpg" alt="Arroz 3">
+    <img src="https://drive.google.com/uc?id=1oF7eBu6mzU3XaW4uEoCIwNnRTKLjeQu-" alt="Arroz 3">
     <p>En este plato, se ha combinado el sabor intenso y ahumado del pollo al curry con las verduras típicas de la cocina mediterránea. 
         El curry, con sus notas de especias como la cúrcuma, el comino y la pimienta, aporta un toque exótico y un profundo sabor al plato. 
         Las verduras frescas, como pimientos, tomates y hierbas aromáticas, contrastan con la riqueza del curry, brindando frescura y equilibrando los sabores. 
         El resultado es un plato lleno de contrastes, donde los aromas y sabores de Oriente se funden con los ingredientes del Mediterráneo, creando una experiencia culinaria única y deliciosa.
 
 </p>
-    <img src="file:///C:/Users/Tarde/Downloads/grok-image-9a6343c5-4a1f-43e5-aed9-5ee4e9e38660.png" alt="Proceso RIZZA">
+    <img src="https://drive.google.com/uc?id=1BPPO5BfXzn663Qis_G5UJSBD_wfQpvNN" alt="Proceso RIZZA">
     <p>En esta foto podéis observar a uno de nuestros chefs cocinando el arroz.</p>
   </div>
 </section>
@@ -203,4 +203,5 @@
 </footer>
 
 </body>
+
 </html>
